@@ -107,6 +107,8 @@ Version CVS HEAD (?)
       instrument-level gig parameters
     - fixed minor artifacts in pitch bend handling
     - added support for GS Reset SysEx message
+    - allow gig files to use unlimited downward pitch shifting
+    - added a limit check for upward pitch shifting
 
   * LSCP server:
     - added new LSCP event "CHANNEL_MIDI" which can be used by frontends to
